# scheduler-

./: .env  .gitignore  conftest.py  main.py  pyproject.toml  pytest.ini  readme.md
src/: exeptions.py  scheduler.py  shema.py
src/helper/: custom_logging.py
tests/: test_real_all_api.py  test_unit_mock.py
