[tool.poetry]
name = "Scheduler"
version = "0.1.0"
description = ""
authors = ["kuravamnedura"]

[tool.poetry.dependencies]
python = "3.6"
requests = "2.25.1"
python-dotenv = "0.19.2"
typer = "0.4.1"
dataclasses = "0.8"


[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"